# opengl

task1/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
task1/assets/: simple-shader.fs
task2/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  run.sh
task2/assets/: cubemap-shader.vs  object-shader.fs  simple-shader.vs
task3/: CMakeLists.txt  README.md  main.cpp  run.sh
task3/assets/: boat-shader.fs  boat-shader.vs  cubemap-shader.vs  landscape-shader.fs  landscape-shader.vs  lighthouse-shader.fs  lighthouse-shader.vs  object-preshader.fs  object-preshader.vs  object-shader.fs  object-shader.vs  water-shader.fs  water-shader.vs
task3/libs/: tiny_obj_loader.h
task4/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
task4/assets/: boat-shader.fs  boat-shader.vs  cubemap-shader.fs  heightmap-shader.fs  heightmap-shader.vs  landscape-shader.vs  lighthouse-shader.vs  water-preshader.vs  water-shader.fs  water-shader.vs
